fe-boilerplate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-boilerplate
  namespace: frontend
  labels:
    app: fe-boilerplate
spec:
  type: NodePort
  selector:
    app: fe-boilerplate
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      # nodePort: 30081
